--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -68,7 +68,7 @@
     <string name="camera_setas_wallpaper" msgid="797463183863414289">"Фоновий мал."</string>
     <string name="pref_gallery_category" msgid="5826488887237959433">"Загальні налашт-ня"</string>
     <string name="pref_slideshow_category" msgid="9097962086335681667">"Налашт-ня слайд-шоу"</string>
-    <string name="pref_gallery_size_title" msgid="1363406603879434418">"Розмір показу"</string>
+    <string name="pref_gallery_size_title" msgid="1363406603879434418">"Масштаб"</string>
     <string name="pref_gallery_size_summary" msgid="7365675768755956361">"Вибрати розмір показу фото та відео"</string>
     <string name="pref_gallery_size_dialogtitle" msgid="757380558320647503">"Розмір фото"</string>
   <string-array name="pref_gallery_size_choices">
