Import translations. DO NOT MERGE
Change-Id: I7ffe95de225d4023ee6bf7b9b98c6290a346c519
Auto-generated-cl: translation import
Exempt-From-Owner-Approval: translation import

--- a/res/values-kn/strings.xml
+++ b/res/values-kn/strings.xml
@@ -101,7 +101,7 @@
   </string-array>
     <string name="pref_gallery_slideshow_repeat_title" msgid="6512135022461429738">"ಸ್ಲೈಡ್‌ಶೋ ಪುನರಾವರ್ತಿಸಿ"</string>
     <string name="pref_gallery_slideshow_repeat_summary" msgid="8289230397431855268">"ಒಂದಕ್ಕಿಂತ ಹೆಚ್ಚು ಬಾರಿ ಸ್ಲೈಡ್‌ಶೋ ಪ್ಲೇ ಮಾಡಿ"</string>
-    <string name="pref_gallery_slideshow_shuffle_title" msgid="3677508579783015598">"ಸ್ಲೈಡ್‌ಗಳನ್ನು ಷಫಲ್ ಮಾಡಿ"</string>
+    <string name="pref_gallery_slideshow_shuffle_title" msgid="3677508579783015598">"ಸ್ಲೈಡ್‌ಗಳನ್ನು ಶಫಲ್ ಮಾಡಿ"</string>
     <string name="pref_gallery_slideshow_shuffle_summary" msgid="8566948749149325715">"ಚಿತ್ರಗಳನ್ನು ರ‍್ಯಾಂಡಮ್‌ ಕ್ರಮದಲ್ಲಿ ತೋರಿಸಿ"</string>
     <string name="camerasettings" msgid="2433519618178453928">"ಸೆಟ್ಟಿಂಗ್‌ಗಳು"</string>
     <string name="image_gallery_NoImageView_text" msgid="409595259802877447">"ಯಾವುದೇ ಮಾಧ್ಯಮ ಕಂಡುಬಂದಿಲ್ಲ."</string>
