--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -66,7 +66,7 @@
     <string name="video_play" msgid="5287787282508002895">"Пушти"</string>
     <string name="camera_pick_wallpaper" msgid="7026385960511811641">"Слики"</string>
     <string name="camera_setas_wallpaper" msgid="797463183863414289">"Тапет"</string>
-    <string name="pref_gallery_category" msgid="5826488887237959433">"Општи подесувања"</string>
+    <string name="pref_gallery_category" msgid="5826488887237959433">"Општи поставки"</string>
     <string name="pref_slideshow_category" msgid="9097962086335681667">"Поставки на приказ на слајдови"</string>
     <string name="pref_gallery_size_title" msgid="1363406603879434418">"Големина на прикажување"</string>
     <string name="pref_gallery_size_summary" msgid="7365675768755956361">"Избери големина на прикажување слики и видеа"</string>
