--- a/res/values-bn/strings.xml
+++ b/res/values-bn/strings.xml
@@ -47,7 +47,7 @@
     <string name="multiselect" msgid="4761682939945434146">"একাধিক নির্বাচন"</string>
     <string name="capture_picture" msgid="4114265595549284643">"ছবি ক্যাপচার করুন"</string>
     <string name="capture_video" msgid="4047046282358697155">"ভিডিও ক্যাপচার করুন"</string>
-    <string name="crop_save_text" msgid="8140440041190264400">"সংরক্ষণ করুন"</string>
+    <string name="crop_save_text" msgid="8140440041190264400">"সেভ করুন"</string>
     <string name="crop_discard_text" msgid="5303657888280340603">"খারিজ করুন"</string>
     <string name="confirm_delete_title" msgid="263478358046514887">"মুছুন"</string>
     <string name="confirm_delete_message" msgid="2141726810668595858">"এই ছবিটি মুছবেন?"</string>
@@ -153,5 +153,5 @@
     <string name="multiselect_share" msgid="5261644537749253581">"শেয়ার করুন"</string>
     <string name="multiselect_delete" msgid="9113461994546744603">"মুছুন"</string>
     <string name="multiselect_cancel" msgid="5969428692864002165">"বাতিল"</string>
-    <string name="delete_images_message" msgid="2332683687700452577">"চিত্রগুলি মুছে ফেলা হচ্ছে..."</string>
+    <string name="delete_images_message" msgid="2332683687700452577">"ছবিগুলি মুছে ফেলা হচ্ছে..."</string>
 </resources>
