--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -149,7 +149,7 @@
     <string name="resume_playing_restart" msgid="5471008499835769292">"Torna a començar"</string>
     <string name="gadget_title" msgid="259405922673466798">"Marc de la imatge"</string>
     <string name="file_info_title" msgid="1628963357466012538">"Informació del fitxer:"</string>
-    <string name="video_exceed_mms_limit" msgid="3835075281230780010">"El vídeo que heu enregistrat és massa gran per enviar-lo mitjançant MMS. Proveu d\'enregistrar un clip més curt."</string>
+    <string name="video_exceed_mms_limit" msgid="3835075281230780010">"El vídeo que heu enregistrat és massa gran per enviar-lo mitjançant MMS. Proveu de gravar un clip més curt."</string>
     <string name="multiselect_share" msgid="5261644537749253581">"Comparteix"</string>
     <string name="multiselect_delete" msgid="9113461994546744603">"Suprimeix"</string>
     <string name="multiselect_cancel" msgid="5969428692864002165">"Cancel·la"</string>
