--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -32,10 +32,10 @@
     <string name="no_storage" product="default" msgid="6680362958795677723">"कॅमेरा वापरण्यापूर्वी आपल्‍याला एक SD कार्ड घालण्‍याची आवश्‍यकता आहे."</string>
     <string name="not_enough_space" product="nosdcard" msgid="7966388882416357252">"आपले सामायिक संचयन पूर्ण भरले."</string>
     <string name="not_enough_space" product="default" msgid="6655334407957844653">"आपले SD कार्ड पूर्ण भरले."</string>
-    <string name="preparing_sd" product="nosdcard" msgid="183917364005592061">"सामायिक केलेले संचयन तयार करीत आहे…"</string>
-    <string name="preparing_sd" product="default" msgid="2914969119574812666">"SD कार्ड तयार करीत आहे..."</string>
-    <string name="wallpaper" msgid="140165383777262070">"वॉलपेपर सेट करीत आहे…"</string>
-    <string name="savingImage" msgid="3051745378545909260">"चित्र जतन करीत आहे..."</string>
+    <string name="preparing_sd" product="nosdcard" msgid="183917364005592061">"सामायिक केलेले संचयन तयार करत आहे…"</string>
+    <string name="preparing_sd" product="default" msgid="2914969119574812666">"SD कार्ड तयार करत आहे..."</string>
+    <string name="wallpaper" msgid="140165383777262070">"वॉलपेपर सेट करत आहे…"</string>
+    <string name="savingImage" msgid="3051745378545909260">"चित्र जतन करत आहे..."</string>
     <string name="runningFaceDetection" msgid="2293932204708167704">"कृपया प्रतीक्षा करा..."</string>
     <string name="view" msgid="6277795271119411881">"पहा"</string>
     <string name="details" msgid="8415120088556445230">"तपशील"</string>
@@ -47,7 +47,7 @@
     <string name="multiselect" msgid="4761682939945434146">"मल्‍टिसिलेक्‍ट"</string>
     <string name="capture_picture" msgid="4114265595549284643">"चित्र कॅप्‍चर करा"</string>
     <string name="capture_video" msgid="4047046282358697155">"व्‍हिडिओ कॅप्‍चर करा"</string>
-    <string name="crop_save_text" msgid="8140440041190264400">"जतन करा"</string>
+    <string name="crop_save_text" msgid="8140440041190264400">"सेव्ह करा"</string>
     <string name="crop_discard_text" msgid="5303657888280340603">"टाकून द्या"</string>
     <string name="confirm_delete_title" msgid="263478358046514887">"हटवा"</string>
     <string name="confirm_delete_message" msgid="2141726810668595858">"हे चित्र हटवायचे?"</string>
@@ -142,7 +142,7 @@
     <string name="sendVideo" msgid="3598567735831863073">"याद्वारे व्‍हिडिओ सामायिक करा"</string>
     <string name="send_media_files" msgid="8201083279723850611">"याद्वारे मीडिया फायली सामायिक करा"</string>
     <string name="movieviewlabel" msgid="7363495772706775465">"चित्रपट"</string>
-    <string name="loading_video" msgid="4013492720121891585">"व्हिडिओ लोड करीत आहे..."</string>
+    <string name="loading_video" msgid="4013492720121891585">"व्हिडिओ लोड करत आहे..."</string>
     <string name="resume_playing_title" msgid="8996677350649355013">"व्हिडिओ पुन्हा सुरु करा"</string>
     <string name="resume_playing_message" msgid="8480340146814638566">"<xliff:g id="DURATION">%s</xliff:g> पासून व्हिडिओ प्ले करणे पुन्हा सुरु करायचे?"</string>
     <string name="resume_playing_resume" msgid="3847915469173852416">"प्ले करणे पुन्हा सुरु करा"</string>
@@ -153,5 +153,5 @@
     <string name="multiselect_share" msgid="5261644537749253581">"सामायिक करा"</string>
     <string name="multiselect_delete" msgid="9113461994546744603">"हटवा"</string>
     <string name="multiselect_cancel" msgid="5969428692864002165">"रद्द करा"</string>
-    <string name="delete_images_message" msgid="2332683687700452577">"प्रतिमा हटवित आहे..."</string>
+    <string name="delete_images_message" msgid="2332683687700452577">"इमेज हटवित आहे..."</string>
 </resources>
