--- a/res/values-en-rXC/strings.xml
+++ b/res/values-en-rXC/strings.xml
@@ -65,8 +65,10 @@
     <skip />
     <!-- no translation found for rotate (460017689320955494) -->
     <skip />
-    <string name="rotate_left" msgid="5888273317282539839">"‎‏‎‎‎‎‎‏‎‏‏‏‎‎‎‎‎‏‎‎‎‏‎‎‏‎‏‏‏‏‏‏‏‎‏‎‎‎‏‏‎‏‏‎‏‏‏‎‏‎‏‏‎‎‏‎‏‏‎‎‎‏‎‎‏‏‏‏‎‎‏‎‎‎‎‏‎‎‏‎‏‏‎‏‎‎‏‎‎‏‏‏‏‏‏‎Rotate left‎‏‎‎‏‎"</string>
-    <string name="rotate_right" msgid="6776325835923384839">"‎‏‎‎‎‎‎‏‎‏‏‏‎‎‎‎‎‏‎‎‎‏‎‎‏‎‏‏‏‏‏‏‏‎‏‏‏‏‎‎‎‎‎‏‎‏‎‎‏‎‏‏‎‎‎‎‏‏‏‎‎‎‏‏‏‏‏‏‏‎‎‏‎‎‎‎‎‏‏‏‏‏‎‏‎‏‎‎‎‎‎‎‏‏‏‎Rotate right‎‏‎‎‏‎"</string>
+    <!-- no translation found for rotate_left (5888273317282539839) -->
+    <skip />
+    <!-- no translation found for rotate_right (6776325835923384839) -->
+    <skip />
     <!-- no translation found for slide_show (1965192737233824143) -->
     <skip />
     <!-- no translation found for multiselect (4761682939945434146) -->
