--- a/res/values-bs/strings.xml
+++ b/res/values-bs/strings.xml
@@ -54,7 +54,7 @@
     <string name="confirm_delete_video_message" msgid="800016540763376529">"Izbrisati ovaj videozapis?"</string>
     <string name="confirm_delete_multiple_message" msgid="5184550162588396436">"Izbrisati ove medijske datoteke?"</string>
     <string name="camera_toss" msgid="3781186798552460833">"Izbriši"</string>
-    <string name="camera_share" msgid="8207701858325694182">"Podijeli"</string>
+    <string name="camera_share" msgid="8207701858325694182">"Dijeli"</string>
     <string name="camera_set" msgid="3422192914806971182">"Postavi kao"</string>
     <string name="camera_play" msgid="8248000517869959980">"Reproduciraj"</string>
     <string name="camera_attach" msgid="4048659554893435232">"Dodaj"</string>
@@ -150,7 +150,7 @@
     <string name="gadget_title" msgid="259405922673466798">"Obrub slike"</string>
     <string name="file_info_title" msgid="1628963357466012538">"Podaci o datoteci:"</string>
     <string name="video_exceed_mms_limit" msgid="3835075281230780010">"Videozapis koji ste snimili je prevelik za slanje putem MMS-a. Pokušajte snimiti kraći videozapis."</string>
-    <string name="multiselect_share" msgid="5261644537749253581">"Podijeli"</string>
+    <string name="multiselect_share" msgid="5261644537749253581">"Dijeli"</string>
     <string name="multiselect_delete" msgid="9113461994546744603">"Izbriši"</string>
     <string name="multiselect_cancel" msgid="5969428692864002165">"Otkaži"</string>
     <string name="delete_images_message" msgid="2332683687700452577">"Brisanje slika…"</string>
