--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -107,7 +107,7 @@
     <string name="image_gallery_NoImageView_text" msgid="409595259802877447">"لم يتم العثور على وسائط."</string>
     <string name="pref_gallery_confirm_delete_title" msgid="642429032687845907">"تأكيد عمليات الحذف"</string>
     <string name="pref_gallery_confirm_delete_summary" msgid="5253456492765525245">"إظهار التأكيد قبل حذف صورة أو فيديو"</string>
-    <string name="no_location_image" msgid="8907867717568887559">"ليست هناك أية معلومات موقع مخزنة في هذه الصورة."</string>
+    <string name="no_location_image" msgid="8907867717568887559">"ليست هناك أي معلومات موقع مخزنة في هذه الصورة."</string>
     <string name="details_panel_title" msgid="4753347516759338122">"التفاصيل"</string>
     <string name="details_file_size" msgid="2468878774843246797">"حجم الملف:"</string>
     <string name="details_image_resolution" msgid="8773315928100529437">"درجة الدقة:"</string>
