--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -54,7 +54,7 @@
     <string name="confirm_delete_video_message" msgid="800016540763376529">"हा व्हिडिओ हटवायचा?"</string>
     <string name="confirm_delete_multiple_message" msgid="5184550162588396436">"या मीडिया फायली हटवायच्या?"</string>
     <string name="camera_toss" msgid="3781186798552460833">"हटवा"</string>
-    <string name="camera_share" msgid="8207701858325694182">"सामायिक करा"</string>
+    <string name="camera_share" msgid="8207701858325694182">"शेअर करा"</string>
     <string name="camera_set" msgid="3422192914806971182">"हे म्हणून सेट करा"</string>
     <string name="camera_play" msgid="8248000517869959980">"प्ले करा"</string>
     <string name="camera_attach" msgid="4048659554893435232">"संलग्न करा"</string>
@@ -137,10 +137,10 @@
     <string name="pick_photos_gallery_title" msgid="8356086704733473321">"चित्र निवडा"</string>
     <string name="videos_gallery_title" msgid="6150354029982749479">"गॅलरी"</string>
     <string name="pick_videos_gallery_title" msgid="568436323607491495">"व्हिडिओ निवडा"</string>
-    <string name="sendImage" msgid="7279510542799399570">"याद्वारे चित्र सामायिक करा"</string>
+    <string name="sendImage" msgid="7279510542799399570">"याद्वारे चित्र शेअर करा"</string>
     <string name="setImage" msgid="7246975856983303047">"चित्र या रूपात सेट करा"</string>
-    <string name="sendVideo" msgid="3598567735831863073">"याद्वारे व्‍हिडिओ सामायिक करा"</string>
-    <string name="send_media_files" msgid="8201083279723850611">"याद्वारे मीडिया फायली सामायिक करा"</string>
+    <string name="sendVideo" msgid="3598567735831863073">"याद्वारे व्‍हिडिओ शेअर करा"</string>
+    <string name="send_media_files" msgid="8201083279723850611">"याद्वारे मीडिया फायली शेअर करा"</string>
     <string name="movieviewlabel" msgid="7363495772706775465">"चित्रपट"</string>
     <string name="loading_video" msgid="4013492720121891585">"व्हिडिओ लोड करत आहे..."</string>
     <string name="resume_playing_title" msgid="8996677350649355013">"व्हिडिओ पुन्हा सुरु करा"</string>
@@ -150,7 +150,7 @@
     <string name="gadget_title" msgid="259405922673466798">"चित्र फ्रेम"</string>
     <string name="file_info_title" msgid="1628963357466012538">"फाईल माहिती:"</string>
     <string name="video_exceed_mms_limit" msgid="3835075281230780010">"MMS द्वारे पाठविण्यासाठी आपण रेकॉर्ड केलेला व्हिडिओ खूप मोठा आहे. एक लहान लांबीची क्लिप रेकॉर्ड करण्‍याचा प्रयत्न करा."</string>
-    <string name="multiselect_share" msgid="5261644537749253581">"सामायिक करा"</string>
+    <string name="multiselect_share" msgid="5261644537749253581">"शेअर करा"</string>
     <string name="multiselect_delete" msgid="9113461994546744603">"हटवा"</string>
     <string name="multiselect_cancel" msgid="5969428692864002165">"रद्द करा"</string>
     <string name="delete_images_message" msgid="2332683687700452577">"इमेज हटवित आहे..."</string>
