--- a/res/values-ne/strings.xml
+++ b/res/values-ne/strings.xml
@@ -132,7 +132,7 @@
     <string name="details_ok" msgid="6848594369924424312">"ठीक छ"</string>
     <string name="context_menu_header" msgid="1185348426222302182">"तस्बिर विकल्पहरू"</string>
     <string name="video_context_menu_header" msgid="7318971116949475029">"भिडियो विकल्पहरू"</string>
-    <string name="multiface_crop_help" msgid="2554690102655855657">"सुरु गर्नका लागि एउटा अनुहार छुनुहोस्।"</string>
+    <string name="multiface_crop_help" msgid="2554690102655855657">"सुरु गर्नाका लागि एउटा अनुहार छुनुहोस्।"</string>
     <string name="photos_gallery_title" msgid="6914406246471015448">"ग्यालरी"</string>
     <string name="pick_photos_gallery_title" msgid="8356086704733473321">"चित्र छान्नुहोस्"</string>
     <string name="videos_gallery_title" msgid="6150354029982749479">"ग्यालरी"</string>
