--- a/res/values-ky/strings.xml
+++ b/res/values-ky/strings.xml
@@ -68,7 +68,7 @@
     <string name="camera_setas_wallpaper" msgid="797463183863414289">"Тушкагаз"</string>
     <string name="pref_gallery_category" msgid="5826488887237959433">"Жалпы жөндөөлөр"</string>
     <string name="pref_slideshow_category" msgid="9097962086335681667">"Слайдшоу жөндөөлөрү"</string>
-    <string name="pref_gallery_size_title" msgid="1363406603879434418">"Дисплей өлчөмү"</string>
+    <string name="pref_gallery_size_title" msgid="1363406603879434418">"Чагылдыруучу өлчөм"</string>
     <string name="pref_gallery_size_summary" msgid="7365675768755956361">"Сүрөттөрдүн жана видеолордун экран ченемин тандоо"</string>
     <string name="pref_gallery_size_dialogtitle" msgid="757380558320647503">"Сүрөт өлчөмү"</string>
   <string-array name="pref_gallery_size_choices">
