--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -28,7 +28,7 @@
     <string name="view_label" msgid="4450531507947335704">"चित्र देखें"</string>
     <string name="preferences_label" msgid="5955678162525051163">"कैमरा सेटिंग"</string>
     <string name="wait" msgid="8600187532323801552">"कृपया प्रतीक्षा करें..."</string>
-    <string name="no_storage" product="nosdcard" msgid="4006727786803418058">"आपको कैमरे का उपयोग करने से पहले साझा मेमोरी को माउंट करना होगा."</string>
+    <string name="no_storage" product="nosdcard" msgid="4006727786803418058">"आपको कैमरे का उपयोग करने से पहले शेयर मेमोरी को माउंट करना होगा."</string>
     <string name="no_storage" product="default" msgid="6680362958795677723">"आपको कैमरे का उपयोग करने से पहले SD कार्ड डालना होगा."</string>
     <string name="not_enough_space" product="nosdcard" msgid="7966388882416357252">"आपका शेयर किया गया मेमोरी पूरा भरा हुआ है."</string>
     <string name="not_enough_space" product="default" msgid="6655334407957844653">"आपका SD कार्ड भरा हुआ है."</string>
@@ -39,7 +39,7 @@
     <string name="runningFaceDetection" msgid="2293932204708167704">"कृपया प्रतीक्षा करें..."</string>
     <string name="view" msgid="6277795271119411881">"देखें"</string>
     <string name="details" msgid="8415120088556445230">"विवरण"</string>
-    <string name="show_on_map" msgid="441725587731006228">"मानचित्र पर दिखाएं"</string>
+    <string name="show_on_map" msgid="441725587731006228">"मैप पर दिखाएं"</string>
     <string name="rotate" msgid="460017689320955494">"घुमाएं"</string>
     <string name="rotate_left" msgid="5888273317282539839">"बाएं घुमाएं"</string>
     <string name="rotate_right" msgid="6776325835923384839">"दाएं घुमाएं"</string>
@@ -54,15 +54,15 @@
     <string name="confirm_delete_video_message" msgid="800016540763376529">"यह वीडियो हटाएं?"</string>
     <string name="confirm_delete_multiple_message" msgid="5184550162588396436">"इन मीडिया फ़ाइलों को हटाएं?"</string>
     <string name="camera_toss" msgid="3781186798552460833">"हटाएं"</string>
-    <string name="camera_share" msgid="8207701858325694182">"साझा करें"</string>
+    <string name="camera_share" msgid="8207701858325694182">"शेयर करें"</string>
     <string name="camera_set" msgid="3422192914806971182">"इस रूप में सेट करें"</string>
     <string name="camera_play" msgid="8248000517869959980">"चलाएं"</string>
     <string name="camera_attach" msgid="4048659554893435232">"जोड़ें"</string>
     <string name="camera_cancel" msgid="8203341746672085747">"अभी नहीं"</string>
     <string name="camera_crop" msgid="5584000454518174632">"काट-छांट करें"</string>
-    <string name="no_way_to_share_image" msgid="7980215622010396797">"चित्र साझा करने के लिए कोई ऐप्स उपलब्‍ध नहीं है."</string>
-    <string name="no_way_to_share_video" msgid="4506167265329982928">"वीडियो को साझा करने के लिए कोई ऐप्स उपलब्‍ध नहीं है."</string>
-    <string name="no_way_to_share" msgid="5276805314940059662">"मीडिया फ़ाइल (फ़ाइलों) को साझा करने के लिए कोई ऐप्स उपलब्‍ध नहीं हैं."</string>
+    <string name="no_way_to_share_image" msgid="7980215622010396797">"चित्र शेयर करने के लिए कोई ऐप्स उपलब्‍ध नहीं है."</string>
+    <string name="no_way_to_share_video" msgid="4506167265329982928">"वीडियो को शेयर करने के लिए कोई ऐप्स उपलब्‍ध नहीं है."</string>
+    <string name="no_way_to_share" msgid="5276805314940059662">"मीडिया फ़ाइल (फ़ाइलों) को शेयर करने के लिए कोई ऐप्स उपलब्‍ध नहीं हैं."</string>
     <string name="video_play" msgid="5287787282508002895">"चलाएं"</string>
     <string name="camera_pick_wallpaper" msgid="7026385960511811641">"चित्र"</string>
     <string name="camera_setas_wallpaper" msgid="797463183863414289">"वॉलपेपर"</string>
@@ -137,10 +137,10 @@
     <string name="pick_photos_gallery_title" msgid="8356086704733473321">"चित्र चुनें"</string>
     <string name="videos_gallery_title" msgid="6150354029982749479">"गैलरी"</string>
     <string name="pick_videos_gallery_title" msgid="568436323607491495">"वीडियो चुनें"</string>
-    <string name="sendImage" msgid="7279510542799399570">"इसके द्वारा चित्र साझा करें"</string>
+    <string name="sendImage" msgid="7279510542799399570">"इसके द्वारा चित्र शेयर करें"</string>
     <string name="setImage" msgid="7246975856983303047">"चित्र इस रूप में सेट करें"</string>
-    <string name="sendVideo" msgid="3598567735831863073">"इसके द्वारा वीडियो साझा करें"</string>
-    <string name="send_media_files" msgid="8201083279723850611">"इसके द्वारा मीडिया फ़ाइलें साझा करें"</string>
+    <string name="sendVideo" msgid="3598567735831863073">"इसके द्वारा वीडियो शेयर करें"</string>
+    <string name="send_media_files" msgid="8201083279723850611">"इसके द्वारा मीडिया फ़ाइलें शेयर करें"</string>
     <string name="movieviewlabel" msgid="7363495772706775465">"फिल्में"</string>
     <string name="loading_video" msgid="4013492720121891585">"वीडियो लोड हो रहा है..."</string>
     <string name="resume_playing_title" msgid="8996677350649355013">"वीडियो फिर से शुरू करें"</string>
@@ -150,7 +150,7 @@
     <string name="gadget_title" msgid="259405922673466798">"चित्र फ़्रेम"</string>
     <string name="file_info_title" msgid="1628963357466012538">"फ़ाइल जानकारी:"</string>
     <string name="video_exceed_mms_limit" msgid="3835075281230780010">"आपके द्वारा रिकॉर्ड किया गया वीडियो, MMS द्वारा भेजने में बहुत बड़ा है. छोटी अवधि वाली क्लिप रिकॉर्ड करने का प्रयास करें."</string>
-    <string name="multiselect_share" msgid="5261644537749253581">"साझा करें"</string>
+    <string name="multiselect_share" msgid="5261644537749253581">"शेयर करें"</string>
     <string name="multiselect_delete" msgid="9113461994546744603">"हटाएं"</string>
     <string name="multiselect_cancel" msgid="5969428692864002165">"अभी नहीं"</string>
     <string name="delete_images_message" msgid="2332683687700452577">"चित्र हटा रहा है…"</string>
