--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -60,9 +60,9 @@
     <string name="camera_attach" msgid="4048659554893435232">"संलग्न करा"</string>
     <string name="camera_cancel" msgid="8203341746672085747">"रद्द करा"</string>
     <string name="camera_crop" msgid="5584000454518174632">"क्रॉप करा"</string>
-    <string name="no_way_to_share_image" msgid="7980215622010396797">"चित्र शेअर करण्यासाठी कोणताही अॅप उपलब्ध नाही."</string>
-    <string name="no_way_to_share_video" msgid="4506167265329982928">"व्‍हिडिओ शेअर करण्यासाठी कोणताही अॅप उपलब्ध नाही."</string>
-    <string name="no_way_to_share" msgid="5276805314940059662">"मीडिया फाईल(फायली) शेअर करण्यासाठी कोणताही अॅप उपलब्ध नाही."</string>
+    <string name="no_way_to_share_image" msgid="7980215622010396797">"चित्र शेअर करण्यासाठी कोणताही अ‍ॅप उपलब्ध नाही."</string>
+    <string name="no_way_to_share_video" msgid="4506167265329982928">"व्‍हिडिओ शेअर करण्यासाठी कोणताही अ‍ॅप उपलब्ध नाही."</string>
+    <string name="no_way_to_share" msgid="5276805314940059662">"मीडिया फाईल(फायली) शेअर करण्यासाठी कोणताही अ‍ॅप उपलब्ध नाही."</string>
     <string name="video_play" msgid="5287787282508002895">"प्ले करा"</string>
     <string name="camera_pick_wallpaper" msgid="7026385960511811641">"चित्रे"</string>
     <string name="camera_setas_wallpaper" msgid="797463183863414289">"वॉलपेपर"</string>
