--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -129,7 +129,7 @@
     <string name="details_fps" msgid="5450871169477340537">"<xliff:g id="FRAMES">%1$d</xliff:g> fps"</string>
     <string name="details_kbps" msgid="1515369011744784592">"<xliff:g id="SPEED">%1$d</xliff:g> kbit/s"</string>
     <string name="details_mbps" msgid="3291428849607323284">"<xliff:g id="SPEED">%1$g</xliff:g> Mbit/s"</string>
-    <string name="details_ok" msgid="6848594369924424312">"OK"</string>
+    <string name="details_ok" msgid="6848594369924424312">"Ok"</string>
     <string name="context_menu_header" msgid="1185348426222302182">"Bildoptionen"</string>
     <string name="video_context_menu_header" msgid="7318971116949475029">"Videooptionen"</string>
     <string name="multiface_crop_help" msgid="2554690102655855657">"Zum Beginnen auf ein Gesicht tippen"</string>
