--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -60,9 +60,9 @@
     <string name="camera_attach" msgid="4048659554893435232">"जोड़ें"</string>
     <string name="camera_cancel" msgid="8203341746672085747">"अभी नहीं"</string>
     <string name="camera_crop" msgid="5584000454518174632">"काट-छांट करें"</string>
-    <string name="no_way_to_share_image" msgid="7980215622010396797">"चित्र शेयर करने के लिए कोई ऐप्स उपलब्‍ध नहीं है."</string>
-    <string name="no_way_to_share_video" msgid="4506167265329982928">"वीडियो को शेयर करने के लिए कोई ऐप्स उपलब्‍ध नहीं है."</string>
-    <string name="no_way_to_share" msgid="5276805314940059662">"मीडिया फ़ाइल (फ़ाइलों) को शेयर करने के लिए कोई ऐप्स उपलब्‍ध नहीं हैं."</string>
+    <string name="no_way_to_share_image" msgid="7980215622010396797">"चित्र शेयर करने के लिए कोई ऐप्लिकेशन उपलब्‍ध नहीं है."</string>
+    <string name="no_way_to_share_video" msgid="4506167265329982928">"वीडियो को शेयर करने के लिए कोई ऐप्लिकेशन उपलब्‍ध नहीं है."</string>
+    <string name="no_way_to_share" msgid="5276805314940059662">"मीडिया फ़ाइल (फ़ाइलों) को शेयर करने के लिए कोई ऐप्लिकेशन उपलब्‍ध नहीं हैं."</string>
     <string name="video_play" msgid="5287787282508002895">"चलाएं"</string>
     <string name="camera_pick_wallpaper" msgid="7026385960511811641">"चित्र"</string>
     <string name="camera_setas_wallpaper" msgid="797463183863414289">"वॉलपेपर"</string>
@@ -149,7 +149,7 @@
     <string name="resume_playing_restart" msgid="5471008499835769292">"फिर से प्रारंभ करें"</string>
     <string name="gadget_title" msgid="259405922673466798">"चित्र फ़्रेम"</string>
     <string name="file_info_title" msgid="1628963357466012538">"फ़ाइल जानकारी:"</string>
-    <string name="video_exceed_mms_limit" msgid="3835075281230780010">"आपके द्वारा रिकॉर्ड किया गया वीडियो, MMS द्वारा भेजने में बहुत बड़ा है. छोटी अवधि वाली क्लिप रिकॉर्ड करने का प्रयास करें."</string>
+    <string name="video_exceed_mms_limit" msgid="3835075281230780010">"  रिकॉर्ड किया गया वीडियो, MMS द्वारा भेजने में बहुत बड़ा है. छोटी अवधि वाली क्लिप रिकॉर्ड करने का प्रयास करें."</string>
     <string name="multiselect_share" msgid="5261644537749253581">"शेयर करें"</string>
     <string name="multiselect_delete" msgid="9113461994546744603">"हटाएं"</string>
     <string name="multiselect_cancel" msgid="5969428692864002165">"अभी नहीं"</string>
